--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,9 +10,9 @@
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/src/Play.Catalog.Service/bin/Debug/net7.0/Play.Catalog.Service.dll",
+            "program": "${workspaceFolder}/Play.Catalog/src/Play.Catalog.Service/bin/Debug/net7.0/Play.Catalog.Service.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/src/Play.Catalog.Service",
+            "cwd": "${workspaceFolder}/Play.Catalog/src/Play.Catalog.Service",
             "stopAtEntry": false,
             // Enable launching a web browser when ASP.NET Core starts. For more information: https://aka.ms/VSCode-CS-LaunchJson-WebBrowser
             "serverReadyAction": {
