--- a/Play.Common/.vscode/tasks.json
+++ b/Play.Common/.vscode/tasks.json
@@ -7,19 +7,7 @@
             "type": "process",
             "args": [
                 "build",
-                "${workspaceFolder}/src/Play.Catalog.Service/Play.Catalog.Service.csproj",
-                "/property:GenerateFullPaths=true",
-                "/consoleloggerparameters:NoSummary"
-            ],
-            "problemMatcher": "$msCompile"
-        },
-        {
-            "label": "publish",
-            "command": "dotnet",
-            "type": "process",
-            "args": [
-                "publish",
-                "${workspaceFolder}/src/Play.Catalog.Service/Play.Catalog.Service.csproj",
+                "${workspaceFolder}/src/Play.Common/Play.Common.csproj",
                 "/property:GenerateFullPaths=true",
                 "/consoleloggerparameters:NoSummary"
             ],
@@ -30,6 +18,18 @@
             }
         },
         {
+            "label": "publish",
+            "command": "dotnet",
+            "type": "process",
+            "args": [
+                "publish",
+                "${workspaceFolder}/src/Play.Common/Play.Common.csproj",
+                "/property:GenerateFullPaths=true",
+                "/consoleloggerparameters:NoSummary"
+            ],
+            "problemMatcher": "$msCompile"
+        },
+        {
             "label": "watch",
             "command": "dotnet",
             "type": "process",
@@ -37,7 +37,7 @@
                 "watch",
                 "run",
                 "--project",
-                "${workspaceFolder}/src/Play.Catalog.Service/Play.Catalog.Service.csproj"
+                "${workspaceFolder}/src/Play.Common/Play.Common.csproj"
             ],
             "problemMatcher": "$msCompile"
         }
